Implement Oracle download storage budget and strict FIFO delivery